--- a/.github/workflows/create-landingzone.yaml
+++ b/.github/workflows/create-landingzone.yaml
@@ -26,6 +26,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Create directories
+        run: |
+          mkdir manifests/landing-zone/hierarchy/${{ inputs.department }}
+          mkdir manifests/landing-zone/projects/${{ inputs.department }}/${{ inputs.service }}
+
       - name: Get hierarchy kpt package
         uses: docker://gcr.io/kpt-dev/kpt:v1.0.0-beta.9
         with:
