--- a/.github/workflows/create-landingzone.yaml
+++ b/.github/workflows/create-landingzone.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Create directories
         run: |
           mkdir manifests/landing-zone/hierarchy/${{ inputs.department }}
-          mkdir manifests/landing-zone/projects/${{ inputs.department }}/${{ inputs.service }}
+          mkdir -p manifests/landing-zone/projects/${{ inputs.department }}/${{ inputs.service }}
 
       - name: Get hierarchy kpt package
         uses: docker://gcr.io/kpt-dev/kpt:v1.0.0-beta.9
