--- a/.github/workflows/create-landingzone.yaml
+++ b/.github/workflows/create-landingzone.yaml
@@ -1,4 +1,4 @@
-name: Create the landing zone
+name: Create folders and projects
 
 on:
   workflow_dispatch:
@@ -83,7 +83,7 @@ jobs:
         run: |
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
-          git add manifests/landing-zone/
+          git add manifests/
           git commit -m ":robot: Create folder at `date --iso-8601=seconds`"
           git push origin main:dev
 
