--- a/manifests/hierarchy/folders.yaml
+++ b/manifests/hierarchy/folders.yaml
@@ -1,7 +1,7 @@
 apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
 kind: Folder
 metadata:
-  name: department-folder # kpt-set: ${department}
+  name: department-folder # kpt-set: ${department}-folder
   namespace: hierarchy  
 spec:
   displayName: folder-name # kpt-set: ${department}
@@ -11,7 +11,7 @@ spec:
 apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
 kind: Folder
 metadata:
-  name: service-folder # kpt-set: ${department}-${service}
+  name: service-folder # kpt-set: ${department}-${service}-folder
   namespace: hierarchy
 spec:
   displayName: folder-name # kpt-set: ${department}-${service}
