--- a/manifests/projects/project.yaml
+++ b/manifests/projects/project.yaml
@@ -1,12 +1,12 @@
 apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
 kind: Project
 metadata:
-  name: prod-project-name # kpt-set: ${project-id}-prod
+  name: prod-project-name # kpt-set: ${project-id}-prod-project
   namespace: projects
 spec:
   name: prod-project-name # kpt-set: ${project-id}-prod
   billingAccountRef:
     external: "AAAAAA-BBBBBB-CCCCCC" # kpt-set: ${billing-account-id}
   folderRef:
-    name: folder-name # kpt-set: ${folder-name}
+    name: folder-name # kpt-set: ${folder-name}-folder
     namespace: hierarchy
