--- a/.github/workflows/create-landingzone.yaml
+++ b/.github/workflows/create-landingzone.yaml
@@ -26,9 +26,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Create project directory
+      - name: Create directory if not exists
         run: |
-          mkdir manifests/landing-zone/projects/${{ inputs.department }}
+          mkdir -p manifests/landing-zone/hierarchy
+          mkdir -p manifests/landing-zone/projects/${{ inputs.department }}
 
       - name: Get hierarchy kpt package
         uses: docker://gcr.io/kpt-dev/kpt:v1.0.0-beta.9
