--- a/.github/workflows/create-landingzone.yaml
+++ b/.github/workflows/create-landingzone.yaml
@@ -34,12 +34,12 @@ jobs:
       - name: Get hierarchy kpt package
         uses: docker://gcr.io/kpt-dev/kpt:v1.0.0-beta.9
         with:
-          args: pkg get https://github.com/yoshimasak/configcontroller-demorepo.git/templates/hierarchy@main manifests/landing-zone/hierarchy/${{ inputs.department }}
+          args: pkg get https://github.com/yoshimasak/configcontroller-demorepo.git/manifests/hierarchy@main manifests/landing-zone/hierarchy/${{ inputs.department }}
 
       - name: Get project kpt package
         uses: docker://gcr.io/kpt-dev/kpt:v1.0.0-beta.9
         with:
-          args: pkg get https://github.com/yoshimasak/configcontroller-demorepo.git/templates/projects@main manifests/landing-zone/projects/${{ inputs.department }}/${{ inputs.service }}
+          args: pkg get https://github.com/yoshimasak/configcontroller-demorepo.git/manifests/projects@main manifests/landing-zone/projects/${{ inputs.department }}/${{ inputs.service }}
 
       - name: Change permission
         run: |
